Fix invisible progress bar when color set to white

--- a/src/styles/layouts/layout_01.css
+++ b/src/styles/layouts/layout_01.css
@@ -131,4 +131,5 @@
 
 .layout-01 .bar{
     border-radius: .7vw;
+    border-right: 1px solid var(--text);
 }
